--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,8 @@ This document is a review article for my spring term of the Science Research Pro
 
 The \TeX~and Python source code for this article is available on GitHub at \url{https://github.com/skysomorphic/review-article}.
 
+\subsection{Acknowledgements}
+
 \section{Mathematical Notation}\label{notation}
 This section will introduce the standard for the mathematical notation used in this document, as well as defining any concepts that are not ubiquitous and may be unfamiliar to the reader. As new topics are introduced, new notation may be defined in their respective sections, as this section is for purely mathematical notation.
 
