--- a/citations.bib
+++ b/citations.bib
@@ -341,3 +341,11 @@
 	doi = {10.5281/zenodo.15420905},
 	file = {PDF:/home/sky/Zotero/storage/M3M87GRH/Moon - 2025 - General Overview for Computer Vision.pdf:application/pdf},
 }
+
+@misc{kempka_vizdoom_2016,
+	title = {{ViZDoom}: A Doom-based {AI} Research Platform for Visual Reinforcement Learning},
+	url = {https://arxiv.org/abs/1605.02097},
+	author = {Kempka, Michał and Wydmuch, Marek and Runc, Grzegorz and Toczek, Jakub and Jaśkowski, Wojciech},
+	date = {2016},
+	note = {\_eprint: 1605.02097},
+}
