organize some things

--- a/citations.bib
+++ b/citations.bib
@@ -349,3 +349,17 @@
 	date = {2016},
 	note = {\_eprint: 1605.02097},
 }
+
+@article{arora_survey_2021,
+	title = {A survey of inverse reinforcement learning: Challenges, methods and progress},
+	volume = {297},
+	issn = {0004-3702},
+	url = {https://www.sciencedirect.com/science/article/pii/S0004370221000515},
+	doi = {https://doi.org/10.1016/j.artint.2021.103500},
+	abstract = {Inverse reinforcement learning ({IRL}) is the problem of inferring the reward function of an agent, given its policy or observed behavior. Analogous to {RL}, {IRL} is perceived both as a problem and as a class of methods. By categorically surveying the extant literature in {IRL}, this article serves as a comprehensive reference for researchers and practitioners of machine learning as well as those new to it to understand the challenges of {IRL} and select the approaches best suited for the problem on hand. The survey formally introduces the {IRL} problem along with its central challenges such as the difficulty in performing accurate inference and its generalizability, its sensitivity to prior knowledge, and the disproportionate growth in solution complexity with problem size. The article surveys a vast collection of foundational methods grouped together by the commonality of their objectives, and elaborates how these methods mitigate the challenges. We further discuss extensions to the traditional {IRL} methods for handling imperfect perception, an incomplete model, learning multiple reward functions and nonlinear reward functions. The article concludes the survey with a discussion of some broad advances in the research area and currently open research questions.},
+	pages = {103500},
+	journaltitle = {Artificial Intelligence},
+	author = {Arora, Saurabh and Doshi, Prashant},
+	date = {2021},
+	keywords = {Generalization, Learning accuracy, Learning from demonstration, Reinforcement learning, Reward function, Survey},
+}
